[package]
name = "rbacr"
version = "0.1.0"
edition = "2021"
authors = ["808Mak1r <808Mak1r@gmail.com>"]
keywords = ["rbac", "kubernetes", "kubernetes-rbac", "rbac-check", "rbac-rust"]
license = "MIT"
repository = "https://github.com/ZhuriLab/rbacr"
description = "Detection tool for possible attacks on RBAC in kubernetes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.77.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
tokio = { version = "1.23.0", features = ["full"] }
log = "0.4.17"
simple_logger = { git = "https://github.com/808Mak1r/rust-simple_logger", rev = "9bad4be" }
time = "0.3.17"
clap = { version = "4.0.32", features = ["derive"] }
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
chrono = "0.4.23"
openssl = { version = "0.10.45", features = ["vendored"] }
